--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,16 @@
     src: url("../fonts/Space_Mono/SpaceMono-Regular.ttf");
 }
 
+@keyframes typing {
+    from { width: 0 }
+    to { width: 53% }
+}
+
+@keyframes blink {
+    from { border-color: transparent };
+    to { border-color:rgb(30, 175, 30)};
+}
+
 html * {
     font-family: "SpaceMono";
 }
@@ -12,4 +22,13 @@ html * {
     margin: auto;
     text-align: center;
     font-size: 100px;
+}
+
+#typed-name {
+    overflow: hidden;
+    border-right: .15em solid rgb(30, 175, 30);
+    color:rgb(30, 175, 30);
+    white-space: nowrap;
+    animation: typing 1.8s steps(18, end) forwards,
+               blink .8s infinite;
 }
