added github button with link

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,11 @@ html * {
     font-size: 5vw;
 }
 
+#name-page-title-zone {
+    padding-top: 30px;
+    text-align: center;
+}
+
 #typed-name {
     max-width: 50%;
     overflow: hidden;
