Changes look and feel of About Me page

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,14 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 4em;
+}
+
+p {
+    font-size: 1.5em;
+}
+
 .yellow-text-with-shadow {
     color: #ffcc00;
     text-shadow: 0 0 2px #100c0f, 0 0 3px #ffaa0099, 0 0 5px #ffaa0099, 0 0 10px #ffaa0099;
@@ -88,4 +96,8 @@ a {
     text-align: left;
     width: 50%;
     padding: 0 3em;
+}
+
+#aboutme {
+    background-color: rgb(73, 173, 245);
 }
