Changes background of Typed Name Container to gradient

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ p {
 }
 
 #typed-name-container {
-    background-image: linear-gradient(128deg,#5f6266,#000);
+    background-image: linear-gradient(128deg,#363739,#000);
 }
 
 #aboutme {
