--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,11 @@ p {
 #skills {
     background-image: linear-gradient(128deg,#ff9a3f,#ff4b40);
 }
+
+#projects {
+    background-image: linear-gradient(128deg,#F2D86F,#F1C40F);
+}
+
+#contactme {
+    background-image: linear-gradient(128deg,#e64d94,#D90368)
+}
