--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,12 @@ p {
     padding: 0 3em;
 }
 
+#me {
+    display: inline-block;
+    width: 400px;
+    height: 410px;
+}
+
 #typed-name-container {
     background-image: linear-gradient(128deg,#363739,#000);
 }
