--- a/css/theo.css
+++ b/css/theo.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Spongebob";
+    src: url("../fonts/Krabby\ Patty.ttf");
+}
+
 body {
     background-color: #1d1d1d;
 }
@@ -28,6 +33,8 @@ body {
 }
 
 .click-me {
+    font-family: "Spongebob";
+    font-size: 30px;
     position: absolute;
     top: 80%;
     left: 50%;
